# onnxruntime-Cpp

./: .gitignore  CMakeLists.txt  build.sh  main.cc
resource/cmake/: onnxruntimeConfig.cmake  onnxruntimeVersion.cmake
tools/: export_resnet.py
